--- a/index.html
+++ b/index.html
@@ -82,7 +82,41 @@ Group of Architects
         </div>
      </section>
      <!--some facts-->
-     <section class="some-facts">
+     <section class="features display-flex">
+        <div>
+            <h3 id="feature-section-title" class="section-title">Features you <br>will love & enjoy</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <!--feature card container-->
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+            </div>
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+            </div>
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+            </div>
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+            </div>
+
+        </div>
+        <div class="featured-architect">
+            <img src="images/architect.png" alt="">
+            <button id="experiance-badge" class="btn-primary">
+                <span id="experiance-year">10+Years</span>
+                <br>
+                <span>Experiance</span>
+            </button>
+        </div>
+     </section>
+
+
+        <section class="some-facts">
         <section class="our-sponsors">
             <div class="sponsor-info">
              <h3 class="section-title">Our Sponsors</h3>
