--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ Group of Architects
      </section>
 
     </main>
-    <footer>
-
+    <footer class="footer">
+     <p class="footer-content"><small>All rights reserved copyright@2023 startup landing page design</small></p>
     </footer>
 </body>
 </html>
